<resources>
    <string name="app_name">Kotlin x Firebase</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="login_label">Log in</string>
    <string name="logout_label">Log out</string>
    <string name="users_label">Users</string>
    <string name="accounts_label">Accounts</string>
    <string name="name_label">Name</string>
    <string name="account_name_label">Account Name</string>
    <string name="client_name_label">Client Name</string>
    <string name="operation_responsible_name_label">Operation Responsible Name</string>
    <string name="consult_team_label">Consul Team</string>
    <string name="filter_label">Filter</string>
    <string name="english_level_label">English Level (%)</string>
    <string name="technical_knowledge_label">Technical Knowledge</string>
    <string name="technical_knowledge_message">Please add your Technical Knowledge</string>
    <string name="cv_label">Curriculum Link</string>
    <string name="filter_by_team">By team</string>
    <string name="filter_by_name">By name</string>
    <string name="filter_by_date">By date</string>
    <string name="start_date_label">Start date</string>
    <string name="ending_date_label">Ending date</string>
    <string name="start_date_with_format_label">Start date DD/MM/YYYY</string>
    <string name="ending_date_with_format_label">Ending date DD/MM/YYYY</string>
    <string name="user_label">User</string>
    <string name="admin_label">Admin</string>
    <string name="super_admin_label">Super Admin</string>
    <string name="level_access_label">Level Access: </string>
    <string name="no_label">No</string>
    <string name="yes_label">Yes</string>

    <string name="success_label">Successful</string>
    <string name="error_label">Error</string>
    <string name="accept_label">Accept</string>
    <string name="error_message">There can be no empty fields</string>
    <string name="error_updating_data">An error has occurred, check your internet connection please</string>
    <string name="error_connection_message">Check your internet connection please</string>
    <string name="error_occurred_message">An error has occurred</string>
    <string name="error_credentials_message">Some of your credentials are not correct</string>
    <string name="user_created_successfully_label">The user has been created successfully</string>
    <string name="account_created_successfully_label">The account has been created successfully</string>
    <string name="success_updating_data">The data has been updated successfully</string>


    <string name="create_user_label">Create user</string>
    <string name="delete_user_label">Delete user</string>
    <string name="update_user_label">Update user</string>
    <string name="consult_user_label">Consult user</string>
    <string name="move_user_label">Move user to another account</string>
    <string name="consult_log_user_label">Consult log of movements</string>

    <string name="create_account_label">Create account</string>
    <string name="delete_account_label">Delete account</string>
    <string name="update_account_label">Update account</string>
    <string name="consult_account_label">Consult account</string>
    <string name="account_name">Name</string>
    <string name="account_client_name">Client</string>
    <string name="account_responsible_name">Operation Responsible</string>

    <string name="cancel_label">Cancel</string>
    <string name="back_label">Back</string>
    <string name="modify_team_label">Modify Team</string>
    <string name="shared_preferences_file">com.example.mindteamschallenge.PREFERENCES_FILE_KEY</string>
    <string name="welcome_user_message">Welcome User!</string>
    <string name="welcome_admin_message">Welcome Admin!</string>
    <string name="welcome_super_admin_message">Welcome Super Admin!</string>
    <string name="save_changes">Save changes</string>
    <string name="choose_user">Choose user:</string>
    <string name="choose_account">Choose account:</string>
    <string name="choose_new_account">Choose the new account:</string>

    <string name="user_screen_info_name">Name: </string>
    <string name="user_screen_info_email">Email: </string>
    <string name="user_screen_info_english_level">English Level (%): </string>
    <string name="user_screen_info_tech_knowledge">Tech Knowledge: </string>
    <string name="user_screen_info_cv">CV: </string>

    <string name="user_deleted_successfully">User deleted successfully</string>
    <string name="confirm_delete_user">Are you sure to delete this user?</string>

    <string name="account_name_title">Account name: </string>
    <string name="account_client_name_title">Client: </string>
    <string name="account_responsible_name_title">Operation Responsible: </string>
    <string name="account_team_title">Team: </string>
    <string name="account_deleted_successfully">Account deleted successfully</string>
    <string name="confirm_delete_account">Are you sure to delete this account?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>