<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".detailsoptionsuser.UserMenuFragment">

    <Button
        android:id="@+id/user_menu_create_user_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/global_margin"
        android:text="@string/create_user_label"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/user_menu_delete_user_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/global_margin"
        android:text="@string/delete_user_label"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/user_menu_update_user_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/global_margin"
        android:text="@string/update_user_label"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/user_menu_consult_user_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/global_margin"
        android:text="@string/consult_user_label"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/user_menu_move_user_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/global_margin"
        android:text="@string/move_user_label"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/user_menu_log_movements_user_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/global_margin"
        android:text="@string/consult_log_user_label"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/user_menu_cancel_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/global_margin"
        android:backgroundTint="@color/orange"
        android:text="@string/cancel_label"
        android:textColor="@color/white"/>

</LinearLayout>