<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".detailsoptions.AccountMenuFragment">

    <Button
        android:id="@+id/account_menu_create_user_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/global_margin"
        android:text="@string/create_account_label"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/account_menu_delete_user_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/global_margin"
        android:text="@string/delete_account_label"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/account_menu_update_user_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/global_margin"
        android:text="@string/update_account_label"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/account_menu_consult_user_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/global_margin"
        android:text="@string/consult_account_label"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/account_menu_cancel_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/global_margin"
        android:backgroundTint="@color/orange"
        android:text="@string/cancel_label"
        android:textColor="@color/white"/>

</LinearLayout>