<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".detailsoptions.CreateAccountFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/global_margin"
        android:textColor="@color/black"
        android:text="@string/create_account_label"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="@dimen/is_admin_label"/>

    <EditText
        android:id="@+id/create_account_edittext_name_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/global_margin"
        android:inputType="text"
        android:hint="@string/account_name" />

    <EditText
        android:id="@+id/create_account_edittext_name_client"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_margin="@dimen/global_margin"
        android:hint="@string/account_client_name" />

    <EditText
        android:id="@+id/create_account_edittext_responsible_operation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_margin="@dimen/global_margin"
        android:hint="@string/account_responsible_name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/global_margin"
        android:weightSum="2"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/create_account_cancel_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="@dimen/global_margin"
            android:textColor="@color/white"
            android:text="@string/cancel_label" />

        <Button
            android:id="@+id/create_account_accept_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="@dimen/global_margin"
            android:textColor="@color/white"
            android:text="@string/accept_label"/>

    </LinearLayout>

</LinearLayout>