<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".superadmin.SuperAdminScreenActivity">

        <Button
            android:id="@+id/users_super_admin_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/global_margin"
            android:text="@string/users_label" />

        <Button
            android:id="@+id/accounts_super_admin_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/global_margin"
            android:text="@string/accounts_label" />

        <Button
            android:id="@+id/logout_super_admin_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/orange"
            android:layout_margin="@dimen/global_margin"
            android:text="@string/logout_label" />

    </LinearLayout>
</layout>