<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="5"
        tools:context=".login.LoginActivity">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/header_height"
            android:layout_weight="0"
            android:background="@color/ocean_blue"
            android:src="@drawable/banner" />

        <EditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:layout_weight=".3"
            android:layout_margin="@dimen/global_margin"
            android:hint="@string/email_label" />

        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_weight=".3"
            android:layout_margin="@dimen/global_margin"
            android:hint="@string/password_label" />

        <Button
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:layout_margin="@dimen/global_margin"
            android:background="@color/ocean_blue"
            android:text="@string/login_label" />

        <ProgressBar
            android:id="@+id/progress_bar_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:visibility="gone" />


    </LinearLayout>
</layout>