<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".detailsoptionsaccount.ConsultAccount">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_above="@+id/buttons_group">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/global_margin"
                android:layout_marginTop="@dimen/global_margin"
                android:layout_marginBottom="@dimen/global_margin"
                android:text="@string/account_name_title"
                android:textStyle="bold"
                android:textSize="@dimen/item_list"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/consult_account_name_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/global_margin"
                android:layout_marginBottom="@dimen/global_margin"
                android:textColor="@color/black"
                android:textSize="@dimen/item_list_second_size" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/global_margin"
                android:layout_marginBottom="@dimen/global_margin"
                android:text="@string/account_client_name_title"
                android:textStyle="bold"
                android:textSize="@dimen/item_list"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/consult_client_name_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/global_margin"
                android:layout_marginBottom="@dimen/global_margin"
                android:textColor="@color/black"
                android:textSize="@dimen/item_list_second_size"  />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/global_margin"
                android:layout_marginBottom="@dimen/global_margin"
                android:text="@string/account_responsible_name_title"
                android:textStyle="bold"
                android:textSize="@dimen/item_list"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/consult_op_responsible_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/global_margin"
                android:layout_marginBottom="@dimen/global_margin"
                android:textColor="@color/black"
                android:textSize="@dimen/item_list_second_size" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/global_margin"
                android:layout_marginBottom="@dimen/global_margin"
                android:text="@string/account_team_title"
                android:textStyle="bold"
                android:textSize="@dimen/item_list"
                android:textColor="@color/black" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/consult_account_recyclerview"
                android:layout_width="match_parent"
                android:layout_marginBottom="@dimen/global_margin"
                android:layout_marginHorizontal="@dimen/global_margin"
                android:orientation="vertical"
                android:layout_height="match_parent" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttons_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginHorizontal="@dimen/global_margin"
            android:orientation="vertical">

            <Button
                android:id="@+id/consult_account_cancel_changes_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/orange"
                android:text="@string/back_label"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/consult_account_delete_account_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/red"
                android:text="@string/delete_account_label"
                android:textColor="@color/white" />
        </LinearLayout>

    </RelativeLayout>
</layout>